comecei a escrever o conteúdo

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <main>
         <head>
-<h1> Título do site</h1>
+<h1> Cursos grátis</h1>
         </head>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto do artigo 001</p>
+            <h2>Curso de HTML5 e CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, modi illum natus quas et maiores vero delectus, repellat, esse consequatur cupiditate doloremque est eaque! Nulla repellat nobis facere et. Delectus?</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto do artigo 002</p>
+            <h2>Curso de Javascript</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas adipisci vel voluptatem quaerat asperiores? Soluta minus eaque quibusdam eum exercitationem veritatis? Autem molestias velit deserunt, ea error facilis. Repudiandae, ullam!</p>
         </article>
     </main>
 </body>
