--- a/index.html
+++ b/index.html
@@ -4,21 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Título do site</title>
+    <title>Site curso em vídeo</title>
     <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
     <main>
         <head>
 <h1> Cursos grátis</h1>
+    <img src="imagens/curso-em-video-cor.png" alt="curso em video">
         </head>
         <article>
             <h2>Curso de HTML5 e CSS3</h2>
+            <img class='lado' src="imagens/curso-html-css.png" alt="curso html">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, modi illum natus quas et maiores vero delectus, repellat, esse consequatur cupiditate doloremque est eaque! Nulla repellat nobis facere et. Delectus?</p>
+            <p><a href="curso-html.html"> Acesse o curso de HTML5</a></p>
         </article>
         <article>
             <h2>Curso de Javascript</h2>
+            <img class='lado' src="imagens/curso-javascript.png" alt="curso javascript">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas adipisci vel voluptatem quaerat asperiores? Soluta minus eaque quibusdam eum exercitationem veritatis? Autem molestias velit deserunt, ea error facilis. Repudiandae, ullam!</p>
+            <p><a href="curso-js.html"> Acesse o curso de JavaScript</a></p>
         </article>
     </main>
 </body>
