--- a/index.html
+++ b/index.html
@@ -15,19 +15,14 @@
         </head>
         <article>
             <h2>Curso de HTML5 e CSS3</h2>
-            <p>HTML5 (Hypertext Markup Language, versão 5) é uma linguagem de marcação para a World Wide Web e é uma tecnologia chave da Internet, originalmente proposto por Opera Software.</p>
-        </article>
-        <article>
-            <h2>Curso de Javascript</h2>
-            <p>JavaScript (frequentemente abreviado como JS) é uma linguagem de programação interpretada estruturada, de script em alto nível com tipagem dinâmica fraca e multiparadigma (protótipos, orientado a objeto, imperativo e, funcional)..</p>
             <img class='lado' src="imagens/curso-html-css.png" alt="curso html">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, modi illum natus quas et maiores vero delectus, repellat, esse consequatur cupiditate doloremque est eaque! Nulla repellat nobis facere et. Delectus?</p>
+            <p>HTML5 (Hypertext Markup Language, versão 5) é uma linguagem de marcação para a World Wide Web e é uma tecnologia chave da Internet, originalmente proposto por Opera Software.</p>
             <p><a href="curso-html.html"> Acesse o curso de HTML5</a></p>
         </article>
         <article>
             <h2>Curso de Javascript</h2>
             <img class='lado' src="imagens/curso-javascript.png" alt="curso javascript">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas adipisci vel voluptatem quaerat asperiores? Soluta minus eaque quibusdam eum exercitationem veritatis? Autem molestias velit deserunt, ea error facilis. Repudiandae, ullam!</p>
+            <p>JavaScript (frequentemente abreviado como JS) é uma linguagem de programação interpretada estruturada, de script em alto nível com tipagem dinâmica fraca e multiparadigma (protótipos, orientado a objeto, imperativo e, funcional).</p>
             <p><a href="curso-js.html"> Acesse o curso de JavaScript</a></p>
         </article>
     </main>
